feature: making ranking system
